# heart

./: .dockerignore  .env.example  .gitignore  Dockerfile.web  Makefile  README.md  app.py  best_model.pkl  boxcox_lambdas.pkl  conftest.py  docker-compose.yml  heart-disease-prediction-other.ipynb  pyproject.toml  render.yaml  requirements.txt
backend/: Dockerfile  alembic.ini  requirements.txt  start-render.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  celery_app.py  db.py  main.py  ml.py  models.py  schemas.py  tasks.py
backend/app/core/: config.py  security.py
backend/app/routers/: batch.py  health.py  predict.py
backend/tests/: conftest.py  strategies.py  test_api.py  test_config.py  test_deployment.py  test_migrations.py  test_persistence.py  test_prediction_service.py  test_schemas.py  test_security.py  test_startup.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  index.css  types.ts
frontend/src/components/: ResultCard.tsx  (+3 more)
heart_ml/: __init__.py  config.py  data.py  features.py  pipeline.py  train.py
heart_ml/artifacts/: comparison.csv  metrics.json  model.joblib
static/: style.css
templates/: index.html
tests/: __init__.py  conftest.py  strategies.py  test_data.py  test_features.py  test_pipeline.py  test_property_coverage.py  test_train_functions.py  test_train_integration.py
train/: best_svm.pkl  heart-disease-prediction.ipynb
train/models/: best_svm.pkl
(+1 files in other folders)
