[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-ml"
version = "0.1.0"
description = "Heart disease risk prediction - training pipeline and shared ML library (Decision Tree + KNN)."
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.24",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
notebook = ["jupyter", "nbconvert", "ipykernel"]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[project.scripts]
heart-train = "heart_ml.train:main"

[tool.setuptools]
packages = ["heart_ml"]

[tool.setuptools.package-data]
heart_ml = ["artifacts/*.json", "artifacts/*.csv"]

[tool.pytest.ini_options]
# The heart_ml library tests live in ./tests; the backend service tests live
# in ./backend/tests. Both trees are collected from the project root.
testpaths = ["tests", "backend/tests"]
# The shared Hypothesis profile (>= 100 examples) is registered and loaded in
# the root conftest.py so it applies to every property-based test in the suite.
